feat: add electric vehicle tracking functionality with database migrations and API endpoints
- Implemented migration for electric vehicles, gasoline prices, charging records, and cost tracking.
- Created new tables: AppElectricVehicle, AppGasolinePrice, AppElectricVehicleChargingRecord, and AppElectricVehicleCost.
- Added relationships between electric vehicles and their charging/cost records.
- Developed a test script for electric vehicle cost tracking, including token retrieval, vehicle creation, cost and charging record management, and data cleanup.

--- a/src/DFApp.Domain.Shared/Localization/DFApp/en.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/en.json
@@ -4,8 +4,12 @@
     "Menu:Home": "Home",
     "Menu:RSS": "RSS Management",
     "Menu:RSS:WordSegments": "Word Segments",
-    "Welcome": "Welcome",
-    "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io.",
+    "Menu:ElectricVehicle": "Electric Vehicle",
+    "Menu:ElectricVehicle:Vehicles": "Vehicle Management",
+    "Menu:ElectricVehicle:Costs": "Cost Records",
+    "Menu:ElectricVehicle:Charging": "Charging Records",
+    "Menu:ElectricVehicle:Statistics": "Statistics",
+    "Menu:ElectricVehicle:OilConfig": "Gasoline Vehicle Configuration",
     "Permission:Rss": "RSS Reader",
     "Permission:Rss.Create": "Create RSS Source",
     "Permission:Rss.Update": "Update RSS Source",
@@ -14,6 +18,30 @@
     "Permission:FileFilter": "File Filter",
     "Permission:FileFilter.Create": "Create Filter Rule",
     "Permission:FileFilter.Edit": "Edit Filter Rule",
-    "Permission:FileFilter.Delete": "Delete Filter Rule"
+    "Permission:FileFilter.Delete": "Delete Filter Rule",
+    "Permission:ElectricVehicle": "Electric Vehicle Management",
+    "Permission:ElectricVehicle.Create": "Create Electric Vehicle",
+    "Permission:ElectricVehicle.Edit": "Edit Electric Vehicle",
+    "Permission:ElectricVehicle.Delete": "Delete Electric Vehicle",
+    "Permission:ElectricVehicle.Statistics": "Electric Vehicle Statistics",
+    "Permission:ElectricVehicle.Cost": "Electric Vehicle Cost",
+    "Permission:ElectricVehicle.Cost.Create": "Create Cost Record",
+    "Permission:ElectricVehicle.Cost.Edit": "Edit Cost Record",
+    "Permission:ElectricVehicle.Cost.Delete": "Delete Cost Record",
+    "Permission:ElectricVehicle.Cost.Analysis": "Cost Analysis",
+    "Permission:ElectricVehicle.ChargingRecord": "Electric Vehicle Charging Record",
+    "Permission:ElectricVehicle.ChargingRecord.Create": "Create Charging Record",
+    "Permission:ElectricVehicle.ChargingRecord.Edit": "Edit Charging Record",
+    "Permission:ElectricVehicle.ChargingRecord.Delete": "Delete Charging Record",
+    "Permission:ElectricVehicle.GasolinePrice": "Gasoline Price Management",
+    "Enum:CostType.Charging": "Charging",
+    "Enum:CostType.Maintenance": "Maintenance",
+    "Enum:CostType.Insurance": "Insurance",
+    "Enum:CostType.Parking": "Parking",
+    "Enum:CostType.Repair": "Repair",
+    "Enum:CostType.Other": "Other",
+    "Enum:GasolineGrade.H92": "92 Octane",
+    "Enum:GasolineGrade.H95": "95 Octane",
+    "Enum:GasolineGrade.H98": "98 Octane"
   }
 }
