--- a/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
@@ -13,6 +13,12 @@
     "Menu:Home": "首页",
     "Menu:RSS": "RSS管理",
     "Menu:RSS:WordSegments": "分词统计",
+    "Menu:ElectricVehicle": "电车管理",
+    "Menu:ElectricVehicle:Vehicles": "车辆管理",
+    "Menu:ElectricVehicle:Costs": "成本记录",
+    "Menu:ElectricVehicle:Charging": "充电记录",
+    "Menu:ElectricVehicle:Statistics": "统计分析",
+    "Menu:ElectricVehicle:OilConfig": "油车参数配置",
     "Permission:Rss": "RSS阅读器",
     "Permission:Rss.Create": "创建RSS源",
     "Permission:Rss.Update": "更新RSS源",
@@ -21,7 +27,31 @@
     "Permission:FileFilter": "文件过滤",
     "Permission:FileFilter.Create": "创建过滤规则",
     "Permission:FileFilter.Edit": "编辑过滤规则",
-    "Permission:FileFilter.Delete": "删除过滤规则"
+    "Permission:FileFilter.Delete": "删除过滤规则",
+    "Permission:ElectricVehicle": "电动车管理",
+    "Permission:ElectricVehicle.Create": "创建电动车",
+    "Permission:ElectricVehicle.Edit": "编辑电动车",
+    "Permission:ElectricVehicle.Delete": "删除电动车",
+    "Permission:ElectricVehicle.Statistics": "电动车统计",
+    "Permission:ElectricVehicle.Cost": "电动车成本",
+    "Permission:ElectricVehicle.Cost.Create": "创建成本记录",
+    "Permission:ElectricVehicle.Cost.Edit": "编辑成本记录",
+    "Permission:ElectricVehicle.Cost.Delete": "删除成本记录",
+    "Permission:ElectricVehicle.Cost.Analysis": "成本分析",
+    "Permission:ElectricVehicle.ChargingRecord": "电动车充电记录",
+    "Permission:ElectricVehicle.ChargingRecord.Create": "创建充电记录",
+    "Permission:ElectricVehicle.ChargingRecord.Edit": "编辑充电记录",
+    "Permission:ElectricVehicle.ChargingRecord.Delete": "删除充电记录",
+    "Permission:ElectricVehicle.GasolinePrice": "油价管理",
+    "Enum:CostType.Charging": "充电",
+    "Enum:CostType.Maintenance": "保养",
+    "Enum:CostType.Insurance": "保险",
+    "Enum:CostType.Parking": "停车",
+    "Enum:CostType.Repair": "维修",
+    "Enum:CostType.Other": "其他",
+    "Enum:GasolineGrade.H92": "92号汽油",
+    "Enum:GasolineGrade.H95": "95号汽油",
+    "Enum:GasolineGrade.H98": "98号汽油"
 
   }
 }
