feat: 更新电动车权限字段，统一命名并修正翻译

--- a/src/DFApp.Domain.Shared/Localization/DFApp/en.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/en.json
@@ -24,16 +24,16 @@
     "Permission:ElectricVehicle.Edit": "Edit Electric Vehicle",
     "Permission:ElectricVehicle.Delete": "Delete Electric Vehicle",
     "Permission:ElectricVehicle.Statistics": "Electric Vehicle Statistics",
-    "Permission:ElectricVehicle.Cost": "Electric Vehicle Cost",
-    "Permission:ElectricVehicle.Cost.Create": "Create Cost Record",
-    "Permission:ElectricVehicle.Cost.Edit": "Edit Cost Record",
-    "Permission:ElectricVehicle.Cost.Delete": "Delete Cost Record",
-    "Permission:ElectricVehicle.Cost.Analysis": "Cost Analysis",
-    "Permission:ElectricVehicle.ChargingRecord": "Electric Vehicle Charging Record",
-    "Permission:ElectricVehicle.ChargingRecord.Create": "Create Charging Record",
-    "Permission:ElectricVehicle.ChargingRecord.Edit": "Edit Charging Record",
-    "Permission:ElectricVehicle.ChargingRecord.Delete": "Delete Charging Record",
-    "Permission:ElectricVehicle.GasolinePrice": "Gasoline Price Management",
+    "Permission:ElectricVehicleCost": "Electric Vehicle Cost",
+    "Permission:ElectricVehicleCost.Create": "Create Cost Record",
+    "Permission:ElectricVehicleCost.Edit": "Edit Cost Record",
+    "Permission:ElectricVehicleCost.Delete": "Delete Cost Record",
+    "Permission:ElectricVehicleCost.Analysis": "Cost Analysis",
+    "Permission:ElectricVehicleChargingRecord": "Electric Vehicle Charging Record",
+    "Permission:ElectricVehicleChargingRecord.Create": "Create Charging Record",
+    "Permission:ElectricVehicleChargingRecord.Edit": "Edit Charging Record",
+    "Permission:ElectricVehicleChargingRecord.Delete": "Delete Charging Record",
+    "Permission:GasolinePrice": "Gasoline Price Management",
     "Enum:CostType.Charging": "Charging",
     "Enum:CostType.Maintenance": "Maintenance",
     "Enum:CostType.Insurance": "Insurance",
