--- a/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
+++ b/src/DFApp.Domain.Shared/Localization/DFApp/zh-Hans.json
@@ -33,16 +33,16 @@
     "Permission:ElectricVehicle.Edit": "编辑电动车",
     "Permission:ElectricVehicle.Delete": "删除电动车",
     "Permission:ElectricVehicle.Statistics": "电动车统计",
-    "Permission:ElectricVehicle.Cost": "电动车成本",
-    "Permission:ElectricVehicle.Cost.Create": "创建成本记录",
-    "Permission:ElectricVehicle.Cost.Edit": "编辑成本记录",
-    "Permission:ElectricVehicle.Cost.Delete": "删除成本记录",
-    "Permission:ElectricVehicle.Cost.Analysis": "成本分析",
-    "Permission:ElectricVehicle.ChargingRecord": "电动车充电记录",
-    "Permission:ElectricVehicle.ChargingRecord.Create": "创建充电记录",
-    "Permission:ElectricVehicle.ChargingRecord.Edit": "编辑充电记录",
-    "Permission:ElectricVehicle.ChargingRecord.Delete": "删除充电记录",
-    "Permission:ElectricVehicle.GasolinePrice": "油价管理",
+    "Permission:ElectricVehicleCost": "电动车成本",
+    "Permission:ElectricVehicleCost.Create": "创建成本记录",
+    "Permission:ElectricVehicleCost.Edit": "编辑成本记录",
+    "Permission:ElectricVehicleCost.Delete": "删除成本记录",
+    "Permission:ElectricVehicleCost.Analysis": "成本分析",
+    "Permission:ElectricVehicleChargingRecord": "电动车充电记录",
+    "Permission:ElectricVehicleChargingRecord.Create": "创建充电记录",
+    "Permission:ElectricVehicleChargingRecord.Edit": "编辑充电记录",
+    "Permission:ElectricVehicleChargingRecord.Delete": "删除充电记录",
+    "Permission:GasolinePrice": "油价管理",
     "Enum:CostType.Charging": "充电",
     "Enum:CostType.Maintenance": "保养",
     "Enum:CostType.Insurance": "保险",
